--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^3.11.5",
+    "axios": "^1.12.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^24.4.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
