--- a/backend/.example.env
+++ b/backend/.example.env
@@ -5,3 +5,4 @@ DB_NAME=database-name
 DB_USERNAME=database-username
 DB_PASSWORD=database-password
 TELEGRAM_TOKEN=telegram-token
+FRONTEND_URL=https://examople.com
