--- a/backend/.example.env
+++ b/backend/.example.env
@@ -6,3 +6,6 @@ DB_USERNAME=database-username
 DB_PASSWORD=database-password
 TELEGRAM_TOKEN=telegram-token
 FRONTEND_URL=https://examople.com
+REDIS_HOST
+REDIS_PORT
+REDIS_PASSWORD
