--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,11 +1,12 @@
-PORT=5000
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=database-name
-DB_USERNAME=database-username
-DB_PASSWORD=database-password
-TELEGRAM_TOKEN=telegram-token
-FRONTEND_URL=https://examople.com
+PORT
+DB_HOST
+DB_PORT
+DB_NAME
+DB_USERNAME
+DB_PASSWORD
+TELEGRAM_TOKEN
+FRONTEND_URL
 REDIS_HOST
 REDIS_PORT
+REDIS_USER
 REDIS_PASSWORD
