--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "form-data": "^4.0.4",
+    "grammy": "^1.38.3",
     "ioredis": "^5.8.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
